// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMI Artifact tests should render form without any issues 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main firstep"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-medium"
    >
      pipeline.artifactsSelection.artifactDetails
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="artifactForm"
          >
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.region-0"
              >
                <label
                  class="bp3-label"
                  for="spec.region"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="imagePath_spec.region"
                  >
                    regionLabel
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="spec.region"
                            placeholder="select"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          data-testid="multi-type-button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.tags-1"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="spec.tags"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="imagePath_spec.tags"
                    >
                      pipeline.amiTags
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon fixed"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main textStyles"
                      >
                        keyLabel
                      </p>
                      <div
                        class="bp3-popover-wrapper tagsSelect Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="spec.tags[0].name"
                              placeholder="common.noAvailableTags"
                              style="padding-right: 0px;"
                              type="text"
                              value="tag1"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main textStyles"
                      >
                        Value
                      </p>
                      <div
                        class="bp3-form-group"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="spec.tags[0].value"
                              type="text"
                              value="value1"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main removeTagBtn"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-trash StyledProps--main"
                          icon="trash"
                        >
                          <svg
                            data-icon="trash"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              trash
                            </desc>
                            <path
                              d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addBtn StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add StyledProps--main"
                      icon="add"
                    >
                      <svg
                        data-icon="add"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          add
                        </desc>
                        <path
                          d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      pipeline.amiTags
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.filters-2"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="spec.filters"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="imagePath_spec.filters"
                    >
                      pipeline.amiFilters
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon fixed"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main textStyles"
                      >
                        keyLabel
                      </p>
                      <div
                        class="bp3-popover-wrapper tagsSelect Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="spec.filters[0].name"
                              placeholder=""
                              style="padding-right: 0px;"
                              type="text"
                              value="filter1"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main textStyles"
                      >
                        Value
                      </p>
                      <div
                        class="bp3-form-group"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="spec.filters[0].value"
                              type="text"
                              value="filter1-value"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main removeTagBtn"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-trash StyledProps--main"
                          icon="trash"
                        >
                          <svg
                            data-icon="trash"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              trash
                            </desc>
                            <path
                              d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addBtn StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add StyledProps--main"
                      icon="add"
                    >
                      <svg
                        data-icon="add"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          add
                        </desc>
                        <path
                          d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      pipeline.amiFilters
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="tagGroup"
            >
              <div
                class="bp3-form-group radioGroup"
                data-id="versionType-3"
              >
                <label
                  class="bp3-label"
                  for="versionType"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="imagePath_versionType"
                  >
                    pipeline.artifactsSelection.versionDetails
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--main"
                  >
                    
                    <div
                      class="RadioButtonGroup--inline"
                    >
                      <label
                        class="RadioButton--radio StyledProps--main"
                      >
                        <input
                          checked=""
                          class="RadioButton--input"
                          name="versionType"
                          type="radio"
                          value="value"
                        />
                        <span
                          class="RadioButton--radioIcon"
                        />
                        Value
                      </label>
                      <label
                        class="RadioButton--radio StyledProps--main"
                      >
                        <input
                          class="RadioButton--input"
                          name="versionType"
                          type="radio"
                          value="regex"
                        />
                        <span
                          class="RadioButton--radioIcon"
                        />
                        Regex
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.version-4"
              >
                <label
                  class="bp3-label"
                  for="spec.version"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="imagePath_spec.version"
                  >
                    version
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="spec.version"
                            placeholder="pipeline.artifactsSelection.versionPlaceholder"
                            style="padding-right: 0px;"
                            type="text"
                            value="test"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          data-testid="multi-type-button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <button
              aria-label="back"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="chevron-left"
              >
                <svg
                  data-icon="chevron-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-left
                  </desc>
                  <path
                    d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                back
              </span>
            </button>
            <button
              aria-label="submit"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                submit
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`AMI Artifact tests should render the runtime fields correctly 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main firstep"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-medium"
    >
      pipeline.artifactsSelection.artifactDetails
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="artifactForm"
          >
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.region-0"
              >
                <label
                  class="bp3-label"
                  for="spec.region"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="imagePath_spec.region"
                  >
                    regionLabel
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                  >
                    <div
                      class="TextInput--main MultiTypeInput--input"
                    >
                      <div
                        class="bp3-input-group bp3-disabled"
                      >
                        <input
                          class="bp3-input"
                          disabled=""
                          name="spec.region"
                          placeholder="<+input>"
                          type="text"
                          value="<+input>"
                        />
                      </div>
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                          data-testid="multi-type-button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="runtime-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 10 7.97"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                fill="current-color"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="configureOptions"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                      id="configureOptions_spec.region"
                      style="align-self: center;"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-cog StyledProps--main"
                        icon="cog"
                      >
                        <svg
                          data-icon="cog"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            cog
                          </desc>
                          <path
                            d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.tags-1"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="spec.tags"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="imagePath_spec.tags"
                    >
                      pipeline.amiTags
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon runtime"
                              data-icon="runtime-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 10 7.97"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                  fill="current-color"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <div
                      class="bp3-form-group bp3-disabled runtimeDisabled"
                      data-id="spec.tags-2"
                      style="flex-grow: 1;"
                    >
                      
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="spec.tags"
                            type="text"
                            value="<+input>"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="configureOptions"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                      id="configureOptions_spec.tags"
                      style="align-self: center; margin-top: 10px;"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-cog StyledProps--main"
                        icon="cog"
                      >
                        <svg
                          data-icon="cog"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            cog
                          </desc>
                          <path
                            d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.filters-3"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="spec.filters"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="imagePath_spec.filters"
                    >
                      pipeline.amiFilters
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon fixed"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main textStyles"
                      >
                        keyLabel
                      </p>
                      <div
                        class="bp3-popover-wrapper tagsSelect Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="spec.filters[0].name"
                              placeholder=""
                              style="padding-right: 0px;"
                              type="text"
                              value="filter1"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main textStyles"
                      >
                        Value
                      </p>
                      <div
                        class="bp3-form-group"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="spec.filters[0].value"
                              type="text"
                              value="filter1-value"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--horizontal StyledProps--main removeTagBtn"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-trash StyledProps--main"
                          icon="trash"
                        >
                          <svg
                            data-icon="trash"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              trash
                            </desc>
                            <path
                              d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addBtn StyledProps--intent-primary Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add StyledProps--main"
                      icon="add"
                    >
                      <svg
                        data-icon="add"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          add
                        </desc>
                        <path
                          d="M10.99 6.99h-2v-2c0-.55-.45-1-1-1s-1 .45-1 1v2h-2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1zm-3-7c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      pipeline.amiFilters
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="tagGroup"
            >
              <div
                class="bp3-form-group radioGroup"
                data-id="versionType-4"
              >
                <label
                  class="bp3-label"
                  for="versionType"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="imagePath_versionType"
                  >
                    pipeline.artifactsSelection.versionDetails
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--main"
                  >
                    
                    <div
                      class="RadioButtonGroup--inline"
                    >
                      <label
                        class="RadioButton--radio StyledProps--main"
                      >
                        <input
                          checked=""
                          class="RadioButton--input"
                          name="versionType"
                          type="radio"
                          value="value"
                        />
                        <span
                          class="RadioButton--radioIcon"
                        />
                        Value
                      </label>
                      <label
                        class="RadioButton--radio StyledProps--main"
                      >
                        <input
                          class="RadioButton--input"
                          name="versionType"
                          type="radio"
                          value="regex"
                        />
                        <span
                          class="RadioButton--radioIcon"
                        />
                        Regex
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.version-5"
              >
                <label
                  class="bp3-label"
                  for="spec.version"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="imagePath_spec.version"
                  >
                    version
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                  >
                    <div
                      class="TextInput--main MultiTypeInput--input"
                    >
                      <div
                        class="bp3-input-group bp3-disabled"
                      >
                        <input
                          class="bp3-input"
                          disabled=""
                          name="spec.version"
                          placeholder="<+input>"
                          type="text"
                          value="<+input>"
                        />
                      </div>
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                          data-testid="multi-type-button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="runtime-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 10 7.97"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                fill="current-color"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                    id="configureOptions_spec.version"
                    style="margin-top: 22px;"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-cog StyledProps--main"
                      icon="cog"
                    >
                      <svg
                        data-icon="cog"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          cog
                        </desc>
                        <path
                          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <button
              aria-label="back"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="chevron-left"
              >
                <svg
                  data-icon="chevron-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-left
                  </desc>
                  <path
                    d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                back
              </span>
            </button>
            <button
              aria-label="submit"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                submit
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`AMI Artifact tests should render when versiontype is regex 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main firstep"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-medium"
    >
      pipeline.artifactsSelection.artifactDetails
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="artifactForm"
          >
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.region-0"
              >
                <label
                  class="bp3-label"
                  for="spec.region"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="imagePath_spec.region"
                  >
                    regionLabel
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                  >
                    <div
                      class="TextInput--main MultiTypeInput--input"
                    >
                      <div
                        class="bp3-input-group bp3-disabled"
                      >
                        <input
                          class="bp3-input"
                          disabled=""
                          name="spec.region"
                          placeholder="<+input>"
                          type="text"
                          value="<+input>"
                        />
                      </div>
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                          data-testid="multi-type-button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="runtime-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 10 7.97"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                fill="current-color"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="configureOptions"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                      id="configureOptions_spec.region"
                      style="align-self: center;"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-cog StyledProps--main"
                        icon="cog"
                      >
                        <svg
                          data-icon="cog"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            cog
                          </desc>
                          <path
                            d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.tags-1"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="spec.tags"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="imagePath_spec.tags"
                    >
                      pipeline.amiTags
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon runtime"
                              data-icon="runtime-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 10 7.97"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                  fill="current-color"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <div
                      class="bp3-form-group bp3-disabled runtimeDisabled"
                      data-id="spec.tags-2"
                      style="flex-grow: 1;"
                    >
                      
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="spec.tags"
                            type="text"
                            value="<+input>"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="configureOptions"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                      id="configureOptions_spec.tags"
                      style="align-self: center; margin-top: 10px;"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-cog StyledProps--main"
                        icon="cog"
                      >
                        <svg
                          data-icon="cog"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            cog
                          </desc>
                          <path
                            d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.filters-3"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="spec.filters"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="imagePath_spec.filters"
                    >
                      pipeline.amiFilters
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon runtime"
                              data-icon="runtime-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 10 7.97"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                  fill="current-color"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <div
                      class="bp3-form-group bp3-disabled runtimeDisabled"
                      data-id="spec.filters-4"
                      style="flex-grow: 1;"
                    >
                      
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="spec.filters"
                            type="text"
                            value="<+input>"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="configureOptions"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                      id="configureOptions_spec.filters"
                      style="align-self: center; margin-top: 10px;"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-cog StyledProps--main"
                        icon="cog"
                      >
                        <svg
                          data-icon="cog"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            cog
                          </desc>
                          <path
                            d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="tagGroup"
            >
              <div
                class="bp3-form-group radioGroup"
                data-id="versionType-5"
              >
                <label
                  class="bp3-label"
                  for="versionType"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="imagePath_versionType"
                  >
                    pipeline.artifactsSelection.versionDetails
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--main"
                  >
                    
                    <div
                      class="RadioButtonGroup--inline"
                    >
                      <label
                        class="RadioButton--radio StyledProps--main"
                      >
                        <input
                          class="RadioButton--input"
                          name="versionType"
                          type="radio"
                          value="value"
                        />
                        <span
                          class="RadioButton--radioIcon"
                        />
                        Value
                      </label>
                      <label
                        class="RadioButton--radio StyledProps--main"
                      >
                        <input
                          checked=""
                          class="RadioButton--input"
                          name="versionType"
                          type="radio"
                          value="regex"
                        />
                        <span
                          class="RadioButton--radioIcon"
                        />
                        Regex
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="imagePathContainer"
            >
              <div
                class="bp3-form-group"
                data-id="spec.versionRegex-6"
              >
                <label
                  class="bp3-label"
                  for="spec.versionRegex"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="imagePath_spec.versionRegex"
                  >
                    pipeline.artifactsSelection.versionRegex
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                  >
                    <div
                      class="TextInput--main MultiTypeInput--input"
                    >
                      <div
                        class="bp3-input-group bp3-disabled"
                      >
                        <input
                          class="bp3-input"
                          disabled=""
                          name="spec.versionRegex"
                          placeholder="<+input>"
                          type="text"
                          value="<+input>"
                        />
                      </div>
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                          data-testid="multi-type-button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="runtime-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 10 7.97"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                fill="current-color"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                    id="configureOptions_spec.versionRegex"
                    style="margin-top: 22px;"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-cog StyledProps--main"
                      icon="cog"
                    >
                      <svg
                        data-icon="cog"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          cog
                        </desc>
                        <path
                          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <button
              aria-label="back"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="chevron-left"
              >
                <svg
                  data-icon="chevron-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-left
                  </desc>
                  <path
                    d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                back
              </span>
            </button>
            <button
              aria-label="submit"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                submit
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
